[project]
name = "clovers-sarof-project"
version = "0.4.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
# dependencies = [
#     "pydantic (>=2.10.6,<3.0.0)",
#     "httpx (>=0.28.1,<0.29.0)",
#     "numpy (>=2.2.6,<3.0.0)",
#     "matplotlib (>=3.10.0,<4.0.0)",
#     "mplfinance (>=0.12.10b0,<0.13.0)",
#     "clovers (>=0.4.6,<0.5.0)",
#     "clovers-apscheduler (>=0.2.2,<0.3.0)",
#     "linecard (>=0.2.0,<0.3.0)",
#     "sqlmodel (>=0.0.24,<0.0.25)",
# ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
scipy = "^1.15.1"
# [tool.poetry.workspace]
# packages = ["clovers-sarof-core", "clovers-sarof-game-collection"]
[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "."
