[project]
name = "clovers-sarof-project"
version = "0.4.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

# [tool.poetry.dependencies]
# clovers-sarof = { path = "clovers-sarof", develop = true }
# clovers-sarof-account = { path = "clovers-sarof-account", develop = true }
# clovers-sarof-market = { path = "clovers-sarof-market", develop = true }
# clovers-sarof-prop = { path = "clovers-sarof-prop", develop = true }
# clovers-sarof-game-collection = { path = "clovers-sarof-game-collection", develop = true }


[tool.poetry.group.dev.dependencies]
scipy = "^1.15.1"

[tool.poetry.dependencies]
scipy = "^1.15.3"
matplotlib = "^3.10.3"
