[project]
name = "clovers-sarof-core"
version = "0.1.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "clovers (>=0.4.6,<0.5.0)",
    "linecard (>=0.2.0,<0.3.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
