[project]
name = "clovers_sarof_market"
version = "0.1.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "clovers-sarof-core @ file:///D:/CLOVERS_PLUGINS/clovers-sarof/clovers-sarof-core",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
